--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(bootunpack)
 
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -m32 -Wall -O2")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O2")
 
 set(SOURCE_FILES
         lz4/lz4_compress.c
